[project]
name = "03-customer-service-data-analyst-agent"
version = "0.1.0"
description = "Customer service data analyst agent over the Bitext dataset"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "fsspec>=2026.6.0",
    "huggingface-hub>=1.20.1",
    "langchain-ollama>=1.1.0",
    "langchain[openai]>=1.3.10",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
]


[project.scripts]
cs-agent = "main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
py-modules = ["main", "load_data", "mcp_server"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 78
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
